fix: visual upgrades: horizontal scroll off and more

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@ body {
   width:100vw;
   height:0;
   background-color: white;
+  overflow-x: hidden;
 }
 
 #root {
